Swagger config and corrections
