# src/controller/interfaces/index.ts
@@ -1,9 +1,9 @@
-import { BasicResponse } from '../types'
+import { BasicResponse, GoodbyeResponse } from '../types'
 
 export interface IHelloController {
   getMessage(name?:string): Promise<BasicResponse>
 }
 
 export interface IGoodbyeController {
-  getMessage(name?:string): Promise<BasicResponse>
+  getMessage(name?:string): Promise<GoodbyeResponse>
 }
